<resources>
    <string name="app_name">FinanceSim</string>
    <string name="welcome_message_title">FinanceSim</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_explain">Help</string>
    <string name="menu_add">Input</string>
    <string name="menu_chart">Chart</string>
    <string name="menu_table">Table</string>
    <string name="menu_help">Help</string>
    <string name="title_activity_main">FinanceSim</string>
    <string name="title_activity_add_investmentsavacct">Savings account</string>
    <string name="title_activity_add_expensegeneric">Expense</string>
    <string name="title_activity_add_incomegeneric">Income</string>
    <string name="title_activity_add_debtloan">Loan</string>
    <string name="title_activity_add_investment401k">401(k)</string>
    <string name="title_activity_add_investmentstock">Stock</string>
    <string name="title_activity_add_investmentbond">Bond</string>
    <string name="title_activity_add_debtmortgage">Mortgage</string>
    <string name="title_activity_add_investment_check_acct">Checking account</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_list_fragment">List</string>
    <string name="no_investment_info"><i>No investments have yet been added.</i></string>
    <string name="no_income_info"><i>No income has yet been added.</i></string>
    <string name="no_expense_info"><i>No expenses have yet been added.</i></string>
    <string name="no_debt_info"><i>No debts have yet been added.</i></string>
    <string name="show_table">SHOW TABLE</string>
    <string name="show_chart">SHOW CHART</string>
    <string name="cancel">Cancel</string>
    <string name="percent">%</string>
    <string name="show_predictions">Show predictions</string>
    <string name="progress_bar_info">Simulating your financial future..</string>
    <string name="add_income">Add income</string>
    <string name="add_investmentsav">Add savings acct</string>
    <string name="add_investmentcheckacct">Add checking acct</string>
    <string name="add_investment401k">Add 401(k)</string>
    <string name="add_investmentbond">Add bond</string>
    <string name="add_investmentstock">Add stock</string>
    <string name="add_debtloan">Add loan</string>
    <string name="add_debtmortgage">Add mortgage</string>
    <string name="add_expense">Add expense</string>
    <string name="acct_object">acct_object</string>
    <string name="action_settings">Settings</string>
    <string name="feedback_text1">If you have any comments, questions, complaints please send an email to: <b>codelemma@gmail.com</b>.</string>
    <string name="feedback_text2">We will answer you back as soon as we can.\n\nPlease, rate <b>FinanceSim</b> in GooglePlay.</string>
    <string name="about_title1"><b>Financial simulator</b></string>
    <string name="about_title1_moreinfo"><b>More info</b></string>
    <string name="about_text1"><b>FinanceSim</b> takes income, expenses, savings, and debts as input and gives a simulation output (cash flow, 
        net worth, growth and interrelation of your assets and liabilities) in charts and tables. By playing with input 
        data you can view different scenarios of your financial future.</string>
    <string name="about_title2"><b>Assumptions</b></string>
    <string name="about_text2">Constant inflation, constant return from 401(k) and other investments or savings account, and constant tax rate.</string>
    <string name="about_title3"><b>What this app is not</b></string>
    <string name="about_text3"><b>FinanceSim</b>  is not an expense, income or debt tracker. It uses the data you may track elsewhere, though, as input for the simulations.</string>
    <string name="about_title5"><b>Questions, suggestions, bug reports</b></string>
    <string name="about_text5">I\'ll be happy to hear from you at: <b>codelemma@gmail.com</b></string>
    <string name="about_title6"><b>Disclaimer</b></string>
    <string name="about_text6"><b>FinanceSim</b> serves informative functions only and may not be used as a replacement of legal advice. Although every precaution
        has been taken in preparation of the app, the author assumes no responsibility for errors or omissions and the app is provided without any guarantees,
        conditions or warranties as to its accuracy.</string>
    <string name="chart_no_data_info_text"><b>%s</b> chart empty.\n\n No %s data has yet been added.</string>
    <string name="no_data_info_text"><b>%s</b> table empty.\n\n No %s data has yet been added.</string>
    <string name="no_data_info_button">Add %s data</string>
    <string name="view_chart">VIEW CHART</string>
    <string name="view_table">VIEW TABLE</string>
    <string name="years">Years: </string>
    <string name="start_date_input">Start date</string>
    <string name="cashflows1">Here no input is necessary. All your income, expenses, savings, and debts will be accounted for automatically.</string>
    <string name="cashflows2">Monthly budget surplus is divided between saving accounts according to the specified "surplus fraction", ie. each savings 
        account takes a percentage of monthly savings. If anything is left, it goes to the checking account.\n\n\*Retirement savings and earnings are only added
        to the checking account at withdrawal.</string>
    <string name="networth1">Here no input is necessary. All your income, expenses, savings, and debts will be accounted for automatically. </string>
    <string name="networth2">Net worth chart and table depict your accumulated savings, total debt, and their difference.</string>
    <string name="income_help_yearly_income"><b>Income per year</b>\nGross yearly income.</string>
    <string name="income_help_rise_per_year"><b>Rise per year</b>\nEstimated yearly payment increase rate.</string>
    <string name="income_help_tax_rate"><b>Tax rate</b>\nTotal tax rate.</string>
    <string name="income_help_start_date"><b>Start date</b>\nDate of income commencement. For current salary, specify current month and year. The is independent from <i>simulation start date</i>, 
        which is identical for all your instruments and can be set in <b>Settings</b>.</string>
    <string name="income_help_income_term"><b>Income term</b>\nNumber of years to gather income. </string>
    <string name="debtloan_help_amount"><b>Amount</b>\nLoan amount.</string>
    <string name="debtloan_help_interest_rate"><b>Interest rate</b>\nAnnual interest rate.</string>
    <string name="debtloan_help_term"><b>Loan term</b>\nLoan term (in years).</string>
    <string name="debtloan_help_extra_payment"><b>Monthly extra payment</b>\nAmount added to your monthly payment.</string>
    <string name="debtloan_help_start_date"><b>Start date</b>\nDate of loan commencement. The is independent from <i>simulation start date</i>, 
        which is identical for all your instruments and can be set in <b>Settings</b>.</string>
    <string name="debtmortgage_name_input">Name</string>
    <string name="debtmortgage_name_text">Mortgage</string>
    <string name="debtmortgage_purchase_price_input">Purchase price</string>
    <string name="debtmortgage_purchase_price_text">200000</string>
    <string name="debtmortgage_downpayment_input">Down payment</string>
    <string name="debtmortgage_downpayment_text">20000</string>
    <string name="debtmortgage_interest_rate_input">Interest rate (per yr)</string>
    <string name="debtmortgage_interest_rate_text">5</string>
    <string name="debtmortgage_term_input">Mortgage term (years)</string>
    <string name="debtmortgage_term_text">30</string>
    <string name="debtmortgage_property_insurance_input">Property insurance</string>
    <string name="debtmortgage_property_insurance_text">1.25</string>
    <string name="debtmortgage_property_tax_input">Property tax</string>
    <string name="debtmortgage_property_tax_text">1.25</string>
    <string name="debtmortgage_pmi_input">PMI</string>
    <string name="debtmortgage_pmi_text">0.52</string>
    <string name="debtmortgage_help_amount"><b>Purchase price</b>\nPurchased property price.</string>
    <string name="debtmortgage_help_downpayment"><b>Down payment</b>\nAmount paid in cash at the onset of the loan.</string>
    <string name="debtmortgage_help_interest_rate"><b>Interest rate</b>\nAnnual interest rate.</string>
    <string name="debtmortgage_help_term"><b>Mortgage term</b>\nThe length of time the mortgage terms and conditions 
        (including interest rate) are in effect.</string>
    <string name="debtmortgage_help_property_insurance"><b>Property insurance</b>\nAnnual insurance against risks to the property.</string>
    <string name="debtmortgage_help_property_tax"><b>Property tax</b>\nAnnual property (or millage) tax.</string>
    <string name="debtmortgage_help_pmi"><b>PMI</b>\nPrivate Mortgage Insurance, 
        paid to the lender if the down payment is lower than 20% of the purchased 
        property price or when the loan-to-value ratio is lower than 80 percent. Loan-to-value 
        ratio is a ratio of the loan to the value of an asset purchased. </string>
    <string name="debtmortgage_help_start_date"><b>Start date</b>\nDate of loan commencement. The is independent from <i>simulation start date</i>, 
        which is identical for all your instruments and can be set in <b>Settings</b>.</string>
    <string name="investment401k_help_amount"><b>Current balance</b>\nCurrent balance on your 401(k) account.</string>
    <string name="investment401k_help_annual_salary"><b>Salary</b>\nSalary account associated with the 401(k) plan.</string>
    <string name="investment401k_help_percontrib"><b>Your contribution</b>\nYour annual contribution rate to the account.</string>
    <string name="investment401k_help_employer_match"><b>Employer match</b>\nYour employer\'s contribution match rate.</string>
    <string name="investment401k_help_period"><b>Term</b>\nNumber of years to save.</string>
    <string name="investment401k_help_withdrawabl_tax_rate"><b>Tax rate at withdrawal</b>\nEstimated tax rate at withdrawal.</string>
    <string name="investment401k_help_interest_rate"><b>Expected return (per year)</b>\nExpected rate of return from the invested 401(k) earnings.</string>
    <string name="investment401k_help_start_date"><b>Start date</b>\nDate of 401(k) plan commencement (has to start not earlier than the salary start date). The is independent from <i>simulation start date</i>, 
        which is identical for all your instruments and can be set in <b>Settings</b>.</string>
    <string name="update_data_info">modify your input data to change these simulation results.\n\nChange <b>simulation start</b> in Settings.</string>
    <string name="expl_debts_table_intro_1"><b><i>Loan</i></b>
        \n\n<b>Principal</b>\nThe part of loan paid monthly.
        \n\n<b>Interest</b>\nThe part of the loan fee paid monthly.
        \n\nTo calculate <b>total monthly payment</b> add principal and interest.
        \n\n<b>Total interest</b>\nCumulative amount of interests paid up to a given point in time.
        \n\n<b>Remaining amount</b>\nThe loan amount which remains unpaid (exluding interest).</string>
    <string name="expl_debts_table_intro_2"><b><i>Mortgage</i></b>
        \n\n<b>Principal</b>\nThe part of loan paid monthly.
        \n\n<b>Interest</b>\nThe part of the loan fee paid monthly.
        \n\n<b>Tax, PMI, insurance</b>\nExtra costs, i.e. property tax, Private Mortgage Insurance, and property insurance, paid monthly.
        \n\nTo calculate <b>total monthly payment</b> add principal, interest, and extra costs.
        \n\n<b>Total interest</b>\nCumulative amount of interest paid up to a given point in time.
        \n\n<b>Remaining amount</b>\nThe loan amount which remains unpaid (exluding interest).</string>
</resources>