<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
       
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_amount"
        android:layout_marginBottom="10dp">                      
    </TextView> 
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_annual_salary"
        android:layout_marginBottom="10dp">                      
    </TextView>      
      
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_percontrib"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_employer_match"
        android:layout_marginBottom="10dp">                      
    </TextView>  

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_period"
        android:layout_marginBottom="10dp">                      
    </TextView> 
        
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_withdrawabl_tax_rate"
        android:layout_marginBottom="10dp">                      
    </TextView> 
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_interest_rate"
        android:layout_marginBottom="10dp">                      
    </TextView>     

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/investment401k_help_start_date"
        android:layout_marginBottom="10dp">                      
    </TextView> 

    </LinearLayout>
</ScrollView>