<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
       
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_amount"
        android:layout_marginBottom="10dp">                      
    </TextView> 
        
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_downpayment"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_interest_rate"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_term"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_property_insurance"
        android:layout_marginBottom="10dp">                      
    </TextView>      
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_property_tax"
        android:layout_marginBottom="10dp">                      
    </TextView>  

    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_pmi"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtmortgage_help_start_date"
        android:layout_marginBottom="10dp">                      
    </TextView>     
</LinearLayout>
</ScrollView>