<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddDebtMortgage" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_name_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip"/>        
    
    <EditText
        android:id="@+id/debtmortgage_name"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_name_text"
        android:inputType="textCapSentences" />

    <TextView
        android:text=""                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>     
        
</LinearLayout>        

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_purchase_price_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/debtmortgage_purchase_price"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_purchase_price_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>     
        
    </LinearLayout>        

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_downpayment_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/debtmortgage_downpayment"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_downpayment_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>     
        
    </LinearLayout>        


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_interest_rate_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/debtmortgage_interest_rate"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_interest_rate_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text="@string/percent"                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout>        


    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_term_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/debtmortgage_term"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_term_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout> 

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_property_insurance_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/debtmortgage_property_insurance"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_property_insurance_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout> 

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_property_tax_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/debtmortgage_property_tax"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_property_tax_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout> 

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">    
    
    <TextView
        android:text="@string/debtmortgage_pmi_input"                        
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="3dip" />        
    
    <EditText
        android:id="@+id/debtmortgage_pmi"   
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/debtmortgage_pmi_text"
        android:inputType="numberDecimal" />

    <TextView
        android:text=""                        
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>             
</LinearLayout> 
     <LinearLayout 
        android:id="@+id/submitDebtButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"          
        android:gravity="center"        
        android:orientation="horizontal">
     
     <Button        
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="@string/cancel"
            android:background="@drawable/button_cancel"                
            android:layout_marginRight="5dp"          
            android:onClick="cancelAdding"/>     
    <Button
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="@string/add_debtmortgage"
            android:layout_marginLeft="5dp"                
            android:background="@drawable/button_green"    
            android:onClick="addDebt" /> 

    </LinearLayout>
</LinearLayout>

</ScrollView>