<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtloan_help_amount"
        android:layout_marginBottom="10dp">                      
    </TextView> 
        
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtloan_help_interest_rate"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtloan_help_term"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtloan_help_extra_payment"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/debtloan_help_start_date"
        android:layout_marginBottom="10dp">                      
    </TextView> 
</LinearLayout>