<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
       
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/income_help_yearly_income"
        android:layout_marginBottom="10dp">
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/income_help_rise_per_year"
        android:layout_marginBottom="10dp">                      
    </TextView>  
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/income_help_tax_rate"
        android:layout_marginBottom="10dp">                      
    </TextView>  

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/income_help_income_term"
        android:layout_marginBottom="10dp">                      
    </TextView>
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/income_help_start_date"
        android:layout_marginBottom="10dp">                      
    </TextView>   
    
    </LinearLayout>
</ScrollView>